feat: add ResultWrapValue and ResultWrapValueAsync for wrapping existing values
🚀 Major new features:
- Add ResultWrapValue() for synchronous value wrapping
- Add ResultWrapValueAsync() for asynchronous value/Promise wrapping
- Support for comprehensive validation options:
  - nullAsFailure, undefinedAsFailure, emptyStringAsFailure
  - zeroAsFailure, emptyArrayAsFailure, emptyObjectAsFailure
  - customValidation with detailed error messages
- Enhanced ValueWrapperOptions interface
- 97 comprehensive tests with 93% coverage

📚 Documentation improvements:
- Complete README rewrite with practical examples
- Real-world integration scenarios (NestJS, Service Layer)
- Before/after migration examples
- API reference with all new functions
- Best practices guide

🔧 Technical enhancements:
- Maintain backward compatibility with existing wrappers
- Type-safe validation pipeline
- Error mapping integration
- Context tracking support
- Export all new functions via index.ts

This release allows users to wrap any existing value (including errors, null, undefined) into Result objects, not just functions. Perfect for legacy code integration and validation pipelines.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "usecase_ts",
-  "version": "1.0.0",
-  "description": "Uma implementação do padrão Result para TypeScript",
+  "version": "1.1.0",
+  "description": "Uma implementação robusta do Result Pattern para TypeScript com wrappers para integração legada",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "files": [
@@ -41,7 +41,12 @@
     "pattern",
     "error-handling",
     "usecase",
-    "clean-architecture"
+    "clean-architecture",
+    "wrapper",
+    "legacy-integration",
+    "null-safety",
+    "monads",
+    "functional-programming"
   ],
   "author": "Bruno Santos",
   "license": "MIT",
