feat: update documentation for v1.1.0 with value wrapping features
- Update .github/copilot-instructions.md with ResultWrapValue and ResultWrapValueAsync
- Add documentation for all 4 wrapper functions
- Include new examples structure and npm scripts
- Update README.md with enhanced examples and features
- Document value wrapping validation options
- Add interactive demo commands
- Remove duplicate README.MD file

--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
     "version": "npm run format && git add -A src",
     "docs": "typedoc --out docs src/index.ts",
     "release": "semantic-release",
-    "postversion": "git push && git push --tags"
+    "postversion": "git push && git push --tags",
+    "examples": "npx ts-node examples/index.ts",
+    "showcase": "npx ts-node examples/showcase.ts",
+    "demo": "npx ts-node examples/complete-demo.ts",
+    "value-wrap": "npx ts-node examples/value-wrapping-examples.ts"
   },
   "husky": {
     "hooks": {
